--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "follow-up",
+  "name": "projeto",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
-  "directories": {
-    "test": "test"
-  },
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DanielSantanaSilva/Follow-Up.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DanielSantanaSilva/Follow-Up/issues"
-  },
-  "homepage": "https://github.com/DanielSantanaSilva/Follow-Up#readme",
+  "author": "Daniel Santana",
+  "license": "MIT",
   "dependencies": {
+    "date-fns": "^2.29.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "mongodb": "^4.11.0",
+    "nodemon": "^2.0.20",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
