--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --coverage",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "Daniel Santana",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -20,6 +23,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "jest": "^29.3.1"
   }
 }
