--- a/stories/package.json
+++ b/stories/package.json
@@ -4,18 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/main.js",
+    "dev": "nodemon src/main.js",
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.26.0"
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7",
+    "sequelize": "^6.27.0"
   },
   "devDependencies": {
     "jest": "^29.3.1",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "typescript": "^4.2.2"
   }
 }
