--- a/stories/package.json
+++ b/stories/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.27.0"
   },
   "devDependencies": {
